Ingress-types/hello-app-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-ip
spec:
  selector:
    run: hello-app
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
