Ingress-types/hello-app-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-lb
spec:
  selector:
    run: hello-app
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
