Ingress-types/hello-app-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-np
spec:
  selector:
    run: hello-app
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
