Ingress-types/hello-app-ingress-gce.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-app-gce
  annotations:
    kubernetes.io/ingress.class: gce
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-app-np
          servicePort: 8080
